Funcionalidade de adicionar músicos e instrumento

--- a/OrchestraSystem/Views/Home/Index.cshtml
+++ b/OrchestraSystem/Views/Home/Index.cshtml
@@ -3,5 +3,5 @@
 }
 
 <div class="text-center">
-    <h1>Sistema de cadastro de Orquestras</h1>
+    <h1 id="TituloH1">Sistema de Orquestras</h1>
 </div>
